@@ -33,7 +33,6 @@ import java.io.UncheckedIOException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -77,6 +76,7 @@ final class TestIcebergRestCatalogCaseInsensitiveMapping
         closeAfterClass(testServer::stop);
 
         return IcebergQueryRunner.builder(LOWERCASE_SCHEMA)
+                .addIcebergProperty("fs.hadoop.enabled", "true")
                 .setBaseDataDir(Optional.of(warehouseLocation))
                 .addIcebergProperty("iceberg.catalog.type", "rest")
                 .addIcebergProperty("iceberg.rest-catalog.uri", testServer.getBaseUrl().toString())
@@ -101,13 +101,13 @@ final class TestIcebergRestCatalogCaseInsensitiveMapping
                         LOWERCASE_SCHEMA);
 
         assertQuery("SELECT * FROM information_schema.schemata",
-                        """
-                        VALUES
-                        ('iceberg', 'information_schema'),
-                        ('iceberg', 'system'),
-                        ('iceberg', '%s'),
-                        ('iceberg', 'tpch')
-                        """.formatted(LOWERCASE_SCHEMA));
+                """
+                VALUES
+                ('iceberg', 'information_schema'),
+                ('iceberg', 'system'),
+                ('iceberg', '%s'),
+                ('iceberg', 'tpch')
+                """.formatted(LOWERCASE_SCHEMA));
     }
 
     @Test
@@ -152,11 +152,11 @@ final class TestIcebergRestCatalogCaseInsensitiveMapping
         assertThat(computeActual("SHOW TABLES IN " + SCHEMA).getOnlyColumnAsSet()).contains(lowercaseTableName1, lowercaseTableName2);
         assertThat(computeActual("SHOW TABLES IN " + SCHEMA + " LIKE 'mixed_case_table%'").getOnlyColumnAsSet()).isEqualTo(Set.of(lowercaseTableName1, lowercaseTableName2));
         assertQuery("SELECT * FROM information_schema.tables WHERE table_schema NOT IN ('information_schema', 'system') AND table_type = 'BASE TABLE'",
-                        """
-                        VALUES
-                        ('iceberg', '%1$s', '%2$s', 'BASE TABLE'),
-                        ('iceberg', '%1$s', '%3$s', 'BASE TABLE')
-                        """.formatted(LOWERCASE_SCHEMA, lowercaseTableName1, lowercaseTableName2));
+                """
+                VALUES
+                ('iceberg', '%1$s', '%2$s', 'BASE TABLE'),
+                ('iceberg', '%1$s', '%3$s', 'BASE TABLE')
+                """.formatted(LOWERCASE_SCHEMA, lowercaseTableName1, lowercaseTableName2));
 
         // Add table comment
         assertUpdate("COMMENT ON TABLE " + tableName1 + " IS 'test comment' ");
@@ -214,11 +214,11 @@ final class TestIcebergRestCatalogCaseInsensitiveMapping
         assertThat(computeActual("SHOW TABLES IN " + SCHEMA).getOnlyColumnAsSet()).contains(lowercaseViewName1, lowercaseViewName2);
         assertThat(computeActual("SHOW TABLES IN " + SCHEMA + " LIKE 'mixed_case_view%'").getOnlyColumnAsSet()).contains(lowercaseViewName1, lowercaseViewName2);
         assertQuery("SELECT * FROM information_schema.tables WHERE table_schema != 'information_schema' AND table_type = 'VIEW'",
-                        """
-                         VALUES
-                         ('iceberg', '%1$s', '%2$s', 'VIEW'),
-                         ('iceberg', '%1$s', '%3$s', 'VIEW')
-                         """.formatted(LOWERCASE_SCHEMA, lowercaseViewName1, lowercaseViewName2));
+                """
+                VALUES
+                ('iceberg', '%1$s', '%2$s', 'VIEW'),
+                ('iceberg', '%1$s', '%3$s', 'VIEW')
+                """.formatted(LOWERCASE_SCHEMA, lowercaseViewName1, lowercaseViewName2));
 
         // Add view comment
         assertUpdate("COMMENT ON VIEW " + viewName1 + " IS 'test comment' ");
@@ -243,6 +243,151 @@ final class TestIcebergRestCatalogCaseInsensitiveMapping
         assertQueryFails("SELECT * FROM " + viewName2, ".*'iceberg.%s.%s' does not exist".formatted(LOWERCASE_SCHEMA, lowercaseViewName2));
     }
 
+    @Test
+    void testCachedTableMappingHidesExternallyRecreatedTable()
+    {
+        Map<String, String> namespaceMetadata = backend.loadNamespaceMetadata(NAMESPACE);
+        String namespaceLocation = namespaceMetadata.get(LOCATION_PROPERTY);
+        createDir(namespaceLocation);
+
+        String tableName = "MiXeD_CaSe_ReCrEaTeD_" + randomNameSuffix();
+        String lowercaseTableName = tableName.toLowerCase(ENGLISH);
+
+        // Creating the table resolves its name through the mapping cache while it
+        // does not yet exist remotely, populating the cache with the requested name as-is.
+        String initialLocation = namespaceLocation + "/" + lowercaseTableName + "_initial";
+        assertUpdate("CREATE TABLE " + lowercaseTableName + " (a integer) WITH (location = '" + initialLocation + "')");
+
+        // Drop it on the backend and recreate it under a mixed-case remote name, so the remote name
+        // no longer matches what the cached entry points at.
+        assertThat(backend.dropTable(TableIdentifier.of(NAMESPACE, lowercaseTableName), true)).isTrue();
+
+        String recreatedLocation = namespaceLocation + "/" + lowercaseTableName + "_recreated";
+        createDir(recreatedLocation);
+        createDir(recreatedLocation + "/data");
+        createDir(recreatedLocation + "/metadata");
+        backend.buildTable(TableIdentifier.of(NAMESPACE, tableName), new Schema(required(1, "a", Types.IntegerType.get())))
+                .withLocation(recreatedLocation)
+                .createTransaction()
+                .commitTransaction();
+
+        // A stale mapping would still point at the old lowercase remote name and hide the
+        // externally recreated table; resolution must find the mixed-case table instead.
+        assertUpdate("DROP TABLE " + lowercaseTableName);
+    }
+
+    @Test
+    void testLoadTableProbeDoesNotPolluteViewMapping()
+    {
+        Map<String, String> namespaceMetadata = backend.loadNamespaceMetadata(NAMESPACE);
+        String namespaceLocation = namespaceMetadata.get(LOCATION_PROPERTY);
+        createDir(namespaceLocation);
+
+        String viewName = "MiXed_CaSe_LoAd_TaBlE_PrObE_vIeW_" + randomNameSuffix();
+        String lowercaseViewName = viewName.toLowerCase(ENGLISH);
+        String viewLocation = namespaceLocation + "/" + lowercaseViewName;
+        createDir(viewLocation);
+        createDir(viewLocation + "/data");
+        createDir(viewLocation + "/metadata");
+        backend.buildView(TableIdentifier.of(NAMESPACE, viewName))
+                .withQuery("trino", "SELECT BIGINT '92' value")
+                .withSchema(new Schema(required(1, "value", Types.LongType.get())))
+                .withDefaultNamespace(NAMESPACE)
+                .withLocation(viewLocation)
+                .createOrReplace();
+
+        assertQueryFails("SELECT * FROM \"" + lowercaseViewName + "$history\"", ".*does not exist");
+        assertQuery("SELECT * FROM " + lowercaseViewName, "VALUES (92)");
+
+        assertUpdate("DROP VIEW " + lowercaseViewName);
+    }
+
+    @Test
+    void testViewPropertiesIgnoreStaleNameMapping()
+    {
+        Map<String, String> namespaceMetadata = backend.loadNamespaceMetadata(NAMESPACE);
+        String namespaceLocation = namespaceMetadata.get(LOCATION_PROPERTY);
+        createDir(namespaceLocation);
+
+        String viewName = "MiXed_CaSe_ViEw_PrOpErTiEs_" + randomNameSuffix();
+        String lowercaseViewName = viewName.toLowerCase(ENGLISH);
+
+        // Creating the view resolves its name through the mapping cache (getCached=true) while it does
+        // not yet exist remotely, caching the name as-is. This entry is never invalidated.
+        assertUpdate("CREATE VIEW " + lowercaseViewName + " AS SELECT BIGINT '67' value");
+
+        // Drop it on the backend and recreate it under a mixed-case remote name, so the cached entry
+        // now points at a lowercase remote view that no longer exists.
+        backend.dropView(TableIdentifier.of(NAMESPACE, lowercaseViewName));
+
+        String recreatedLocation = namespaceLocation + "/" + lowercaseViewName + "_recreated";
+        createDir(recreatedLocation);
+        createDir(recreatedLocation + "/data");
+        createDir(recreatedLocation + "/metadata");
+        backend.buildView(TableIdentifier.of(NAMESPACE, viewName))
+                .withQuery("trino", "SELECT BIGINT '67' value")
+                .withSchema(new Schema(required(1, "value", Types.LongType.get())))
+                .withDefaultNamespace(NAMESPACE)
+                .withLocation(recreatedLocation)
+                .createOrReplace();
+
+        // getViewProperties must resolve the view name with getCached=false. If it trusted the cache,
+        // it would load the stale lowercase mapping, miss the recreated mixed-case view, and fail to
+        // report its location.
+        assertThat((String) computeScalar("SHOW CREATE VIEW " + lowercaseViewName))
+                .contains("location = '" + recreatedLocation + "'");
+
+        backend.dropView(TableIdentifier.of(NAMESPACE, viewName));
+    }
+
+    @Test
+    void testCaseInsensitiveCollisionBetweenTableAndView()
+    {
+        // A remote backend that is case-sensitive can hold a table and a view whose names differ
+        // only by case (the Iceberg spec forbids a table and view sharing the *same* name, but not
+        // case-variants). With case-insensitive matching enabled, both collapse to a single Trino
+        // name and Trino cannot address them separately.
+        Map<String, String> namespaceMetadata = backend.loadNamespaceMetadata(NAMESPACE);
+        String namespaceLocation = namespaceMetadata.get(LOCATION_PROPERTY);
+        createDir(namespaceLocation);
+
+        String suffix = randomNameSuffix();
+        String lowercaseName = "cross_type_collision_" + suffix;
+        TableIdentifier remoteTable = TableIdentifier.of(NAMESPACE, "CROSS_TYPE_COLLISION_" + suffix);
+        TableIdentifier remoteView = TableIdentifier.of(NAMESPACE, lowercaseName);
+
+        String tableLocation = namespaceLocation + "/" + lowercaseName + "_table";
+        createDir(tableLocation);
+        createDir(tableLocation + "/data");
+        createDir(tableLocation + "/metadata");
+        backend.buildTable(remoteTable, new Schema(required(1, "t_val", Types.LongType.get())))
+                .withLocation(tableLocation)
+                .createTransaction()
+                .commitTransaction();
+
+        String viewLocation = namespaceLocation + "/" + lowercaseName + "_view";
+        createDir(viewLocation);
+        createDir(viewLocation + "/data");
+        createDir(viewLocation + "/metadata");
+        backend.buildView(remoteView)
+                .withQuery("trino", "SELECT BIGINT '7' AS v_val")
+                .withSchema(new Schema(required(1, "v_val", Types.LongType.get())))
+                .withDefaultNamespace(NAMESPACE)
+                .withLocation(viewLocation)
+                .createOrReplace();
+
+        // The analyzer resolves views before tables (StatementAnalyzer resolves
+        // materialized view -> view -> table), so the query binds to the view and the
+        // colliding table is unreachable: it returns the view's column/value, not the table's.
+        assertThat(computeActual("DESCRIBE " + lowercaseName).getMaterializedRows())
+                .singleElement()
+                .satisfies(row -> assertThat(row.getField(0)).isEqualTo("v_val"));
+        assertQuery("SELECT * FROM " + lowercaseName, "VALUES CAST(7 AS BIGINT)");
+
+        assertUpdate("DROP VIEW " + lowercaseName);
+        assertUpdate("DROP TABLE " + lowercaseName);
+    }
+
     private String getColumnComment(String tableName, String columnName)
     {
         return (String) computeScalar("SELECT comment FROM information_schema.columns " +
@@ -251,7 +396,7 @@ final class TestIcebergRestCatalogCaseInsensitiveMapping
 
     private static void createDir(String absoluteDirPath)
     {
-        Path path = Paths.get(URI.create(absoluteDirPath).getPath());
+        Path path = Path.of(URI.create(absoluteDirPath).getPath());
         try {
             createDirectories(path);
         }
