@@ -18,10 +18,9 @@ import io.airlift.log.Logger;
 import org.junit.jupiter.api.Test;
 import org.yaml.snakeyaml.Yaml;
 
-import java.io.StringReader;
+import java.io.Reader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -43,7 +42,7 @@ public class TestCiWorkflow
 {
     private static final Logger log = Logger.get(TestCiWorkflow.class);
 
-    private static final Path CI_YML_REPO_PATH = Paths.get(".github/workflows/ci.yml");
+    private static final Path CI_YML_REPO_PATH = Path.of(".github/workflows/ci.yml");
     private static final String BUILD_SUCCESS = "build-success";
 
     @Test
@@ -52,11 +51,12 @@ public class TestCiWorkflow
     {
         String uploadTestResultsStepName = "Upload test results";
         Set<String> nonTestSteps = ImmutableSet.of(
+                "Cancel merge queue workflow",
                 uploadTestResultsStepName,
                 "Maven Install");
 
         Yaml yaml = new Yaml();
-        Map<?, ?> workflow = yaml.load(new StringReader(Files.readString(findRepositoryRoot().resolve(CI_YML_REPO_PATH))));
+        Map<?, ?> workflow = yaml.load(Reader.of(Files.readString(findRepositoryRoot().resolve(CI_YML_REPO_PATH))));
         Map<String, ?> jobs = getMap(workflow, "jobs");
         Map<String, ?> test = getMap(jobs, "test");
         List<?> steps = getList(test, "steps");
@@ -104,7 +104,7 @@ public class TestCiWorkflow
             throws Exception
     {
         Yaml yaml = new Yaml();
-        Map<?, ?> workflow = yaml.load(new StringReader(Files.readString(findRepositoryRoot().resolve(CI_YML_REPO_PATH))));
+        Map<?, ?> workflow = yaml.load(Reader.of(Files.readString(findRepositoryRoot().resolve(CI_YML_REPO_PATH))));
         Map<String, ?> jobs = getMap(workflow, "jobs");
 
         Set<String> allJobNames = jobs.keySet();
@@ -142,7 +142,7 @@ public class TestCiWorkflow
             throws Exception
     {
         Yaml yaml = new Yaml();
-        Map<?, ?> workflow = yaml.load(new StringReader(Files.readString(findRepositoryRoot().resolve(CI_YML_REPO_PATH))));
+        Map<?, ?> workflow = yaml.load(Reader.of(Files.readString(findRepositoryRoot().resolve(CI_YML_REPO_PATH))));
         Map<String, ?> jobs = getMap(workflow, "jobs");
         // This assumes the `jobs` map preserves source order
         assertThat(getLast(jobs.keySet()))
@@ -152,7 +152,7 @@ public class TestCiWorkflow
 
     private static Path findRepositoryRoot()
     {
-        Path workingDirectory = Paths.get("").toAbsolutePath();
+        Path workingDirectory = Path.of("").toAbsolutePath();
         log.info("Current working directory: %s", workingDirectory);
         for (Path path = workingDirectory; path != null; path = path.getParent()) {
             if (Files.isDirectory(path.resolve(".git"))) {
